Update Jenkinsfile